compiler/testData/diagnostics/testsWithStdLib/coroutines/kSuspendFunctionAsSupertype.fir.kt
// LANGUAGE: -SuspendFunctionAsSupertype
// SKIP_TXT

import kotlin.reflect.*

<!ABSTRACT_MEMBER_NOT_IMPLEMENTED!>class A<!>: KSuspendFunction0<Unit> {}
